remove regroup() internal helper and use IRanges:::regroupBySupergroup() instead
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@108482 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,20 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.9.2
+Version: 1.9.3
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
 	splicing graphs and their bubbles based on a gene model for a given
 	organism. Additionally it allows the user to assign RNA-seq reads to
 	the edges of a set of splicing graphs, and to summarize them in
-        different ways.
+	different ways.
 Maintainer: H. Pages <hpages@fredhutch.org>
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
-Imports: methods, utils, igraph,
-	 BiocGenerics, S4Vectors, IRanges, GenomeInfoDb, GenomicRanges,
-	 GenomicFeatures, Rsamtools, GenomicAlignments, graph, Rgraphviz
+Imports: methods, utils, igraph, BiocGenerics, S4Vectors, IRanges (>= 2.3.21),
+	 GenomeInfoDb, GenomicRanges, GenomicFeatures, Rsamtools,
+	 GenomicAlignments, graph, Rgraphviz
 Suggests: igraph, Gviz,
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
 	 RUnit
