--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.11.2
+Version: 1.11.3
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -14,7 +14,7 @@ Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, igraph, BiocGenerics,
 	 S4Vectors (>= 0.9.25), IRanges (>= 2.3.21),
-	 GenomeInfoDb, GenomicRanges, GenomicFeatures, Rsamtools,
+	 GenomeInfoDb, GenomicRanges (>= 1.23.21), GenomicFeatures, Rsamtools,
 	 GenomicAlignments, graph, Rgraphviz
 Suggests: igraph, Gviz,
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
