--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.13.0
-Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
+Version: 1.13.1
+Encoding: UTF-8
+Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
 	splicing graphs and their bubbles based on a gene model for a given
 	organism. Additionally it allows the user to assign RNA-seq reads to
 	the edges of a set of splicing graphs, and to summarize them in
 	different ways.
-Maintainer: H. Pages <hpages@fredhutch.org>
+Maintainer: H. Pagès <hpages@fredhutch.org>
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, igraph, BiocGenerics,
