import plot() from graphics
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@119308 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import(methods)
 import(utils)
+importFrom(graphics, plot)
 
 importFrom(igraph, graph.data.frame, get.data.frame, layout.kamada.kawai,
                    plot.igraph, igraph.to.graphNEL)
