--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: This package allows the user to create, manipulate, and visualize
 Maintainer: H. Pagès <hpages@fredhutch.org>
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
-Imports: methods, utils, igraph, BiocGenerics,
+Imports: methods, utils, graphics, igraph, BiocGenerics,
 	 S4Vectors (>= 0.9.25), IRanges (>= 2.3.21),
 	 GenomeInfoDb, GenomicRanges (>= 1.23.21), GenomicFeatures, Rsamtools,
 	 GenomicAlignments, graph, Rgraphviz
