Dispatch on the appropriate plot method was failing because I forgot to import the plot methods from Rgraphviz. Fixed.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@122709 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(graph, nodeDataDefaults, nodeData,
                   edgeDataDefaults, edgeNames, edgeData, edgemode)
 
 importFrom(Rgraphviz, agopen, buildEdgeList, buildNodeList, from, to)
+importMethodsFrom(Rgraphviz, plot)
 
 exportClasses(GeneModel, SplicingGraphs)
 
