--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.22.0
+Version: 1.22.1
 Encoding: UTF-8
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
 License: Artistic-2.0
@@ -11,6 +11,9 @@ Description: This package allows the user to create, manipulate, and visualize
 	the edges of a set of splicing graphs, and to summarize them in
 	different ways.
 Maintainer: H. Pagès <hpages@fredhutch.org>
+biocViews: Genetics, Annotation, DataRepresentation, Visualization,
+	Sequencing, RNASeq, GeneExpression, AlternativeSplicing, Transcription,
+	ImmunoOncology
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, graphics, igraph, BiocGenerics,
@@ -34,4 +37,3 @@ Collate: utils.R
 	 countReads-methods.R
 	 toy_data.R
 	 zzz.R
-biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNASeq, GeneExpression, AlternativeSplicing, Transcription
