Use gene 7597 instead of 100309464 in vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom(igraph, graph.data.frame, get.data.frame, layout.kamada.kawai,
 
 import(BiocGenerics)
 import(S4Vectors)
+import(BiocParallel)
 import(IRanges)
 import(GenomeInfoDb)
 import(GenomicRanges)
