--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.23.1
+Version: 1.23.2
 Encoding: UTF-8
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
 License: Artistic-2.0
@@ -17,7 +17,7 @@ biocViews: Genetics, Annotation, DataRepresentation, Visualization,
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, graphics, igraph, BiocGenerics,
-	 S4Vectors (>= 0.17.5), IRanges (>= 2.3.21),
+	 S4Vectors (>= 0.17.5), BiocParallel, IRanges (>= 2.3.21),
 	 GenomeInfoDb, GenomicRanges (>= 1.23.21), GenomicFeatures, Rsamtools,
 	 GenomicAlignments, graph, Rgraphviz
 Suggests: igraph, Gviz,
