Add URL and BugReports info to DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,21 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.29.1
-Encoding: UTF-8
-Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
-License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
 	splicing graphs and their bubbles based on a gene model for a given
 	organism. Additionally it allows the user to assign RNA-seq reads to
 	the edges of a set of splicing graphs, and to summarize them in
 	different ways.
-Maintainer: H. Pagès <hpages.on.github@gmail.com>
 biocViews: Genetics, Annotation, DataRepresentation, Visualization,
 	Sequencing, RNASeq, GeneExpression, AlternativeSplicing, Transcription,
 	ImmunoOncology
+URL: https://bioconductor.org/packages/SplicingGraphs
+BugReports: https://github.com/Bioconductor/SplicingGraphs/issues
+Version: 1.29.1
+License: Artistic-2.0
+Encoding: UTF-8
+Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
+Maintainer: H. Pagès <hpages.on.github@gmail.com>
 Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, graphics, igraph, BiocGenerics,
