Add new txdbmaker package to Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ biocViews: Genetics, Annotation, DataRepresentation, Visualization,
 	ImmunoOncology
 URL: https://bioconductor.org/packages/SplicingGraphs
 BugReports: https://github.com/Bioconductor/SplicingGraphs/issues
-Version: 1.43.0
+Version: 1.43.1
 License: Artistic-2.0
 Encoding: UTF-8
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pagès
@@ -20,9 +20,8 @@ Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, graphics, igraph, BiocGenerics,
 	 S4Vectors (>= 0.17.5), BiocParallel, IRanges (>= 2.21.2),
-	 GenomeInfoDb, GenomicRanges (>= 1.23.21), GenomicFeatures, Rsamtools,
-	 GenomicAlignments, graph, Rgraphviz
-Suggests: igraph, Gviz,
+	 GenomeInfoDb, GenomicRanges (>= 1.23.21), Rsamtools, graph
+Suggests: igraph, Gviz, txdbmaker,
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
 	 RUnit
 Collate: utils.R
